--- a/mainapp/templates/main.html
+++ b/mainapp/templates/main.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <script src="{% static '/js/scripts.js' %}"></script>
-        <link href="{% static '/css/styles.css' %}" rel="stylesheet"/>
+        <link href="{% static '/css/styles2.css' %}" rel="stylesheet"/>
         <!--    Font de pixel                                                                           -->
         <link href="{% static 'fonts/Munro-2LYe.ttf' %}" rel="stylesheet" media="screen">
     </head>
