--- a/mainapp/templates/main.html
+++ b/mainapp/templates/main.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <script src="{% static '/js/scripts.js' %}"></script>
-        <link href="{% static '/css/styles2.css' %}" rel="stylesheet"/>
+        <link href="{% static '/css/styles.css' %}" rel="stylesheet"/>
         <!--    Font de pixel                                                                           -->
         <link href="{% static 'fonts/Munro-2LYe.ttf' %}" rel="stylesheet" media="screen">
     </head>
@@ -24,10 +24,10 @@
                 {% csrf_token %}
                 {% for preg in preguntas %}
                     <div class='preguntasRespuestas' id='pregunta_{{ forloop.counter }}' hidden>
-                        <div class='containerPregunta'>
-                            <h2 class="numPregunta"> Pregunta {{ forloop.counter }}</h2>
-                            <h3 class="laPregunta">{{ preg.enunciado }}</h3>
-                        </div>
+                    <div class='containerPregunta'>
+                        <h2 class="numPregunta"> Pregunta {{ forloop.counter }}</h2>
+                        <h3 class="laPregunta">{{ preg.enunciado }}</h3>
+                    </div>
                         <ul>
                             {% for respuesta in preg.respuesta_set.all %}
                             <div class='containerRespuesta'>
