Avance Registro Usuario

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,8 +1,6 @@
+{% load static %}
+
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,13 +8,32 @@
         <title>Registrarse</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link href={% static '/css/style.css' %} rel="stylesheet" />
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+        <div class = "content_register">
+            <h1 id = "text_registration">Registrate!!!</h1>
+            <form action="" method="POST" class="form-register">
+                {% csrf_token %}
+                <div class="form-register">
+                    <label>Ingresa tu email: </label>
+                    <input type = "email" id = "email" name = "email"/>
+                </div>
+                <div class="form-register">
+                    <label>Ingresa tu nombre de usuario: </label>
+                    <input type = "text" id = "username" name = "username"/>
+                </div>
+                <div class="form-register">
+                    <label>Ingresa tu contraseña: </label>
+                    <input type = "password" id = "password" name = "password"/>
+                </div>
+                <div class="form-register">
+                    <label>Reingresa tu contraseña: </label>
+                    <input type = "password" id = "password_auth" name = "password_auth"/>
+                </div>
+                <button> Enviar </button>
+            </form>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
