--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class = "content_register">
-            <h1 id = "text_registration">Registrate!!!</h1>
+            <h1 id = "text_registration">Registrate</h1>
             <form action="" method="POST" class="form-register">
                 {% csrf_token %}
                 <div class="form-register">
