--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,8 +1,8 @@
+{% extends "index.html" %}
+{% block content %}
+{% load static %}
+
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,10 +10,31 @@
         <title>Iniciar Sesión</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href={% static 'css/style.css' %}>
     </head>
     <body>
-        {% lorem 100 b random %}
+        <div class = "login_container">
+            <h1 id = "text_login">Inicia Sesión</h1>
+            <form action="" method="POST" class="form-login">
+                {% csrf_token %}
+                <div class="form-login">
+                    <label>Ingresa tu email: </label>
+                    <input type = "email" id = "email" name = "email"/>
+                </div>
+                <div class="form-login">
+                    <label>Ingresa tu nombre de usuario: </label>
+                    <input type = "text" id = "username" name = "username"/>
+                </div>
+                <div class="form-login">
+                    <label>Ingresa tu contraseña: </label>
+                    <input type = "password" id = "password" name = "password"/>
+                </div>
+                <div id = "message_POST"> {{message_POST}}</div>
+                <button id = "button_send_info"> Enviar </button>
+            </form>
+        </div>
+
         <script src="" async defer></script>
     </body>
 </html>
+{% endblock %}
