--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,6 +9,9 @@
         <li>
             <a href = "/login/register"> Registrate </a>
         </li>
+        <li>
+            <a href = "/gatoapp"> Juego del Gato </a>
+        </li>
     </ul>
 </nav>
 {% block content %}
