--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -13,26 +13,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href={% static 'css/style.css' %} rel="stylesheet" />
     </head>
-    <body>
+    <body class = "register_body">
         <div class = "content_register">
             <h1 id = "text_registration">Registrate</h1>
-            <form action="" method="POST" class="form-register">
+            <form action="" method="POST" class="register_form">
                 {% csrf_token %}
-                <div class="form-register">
-                    <label>Ingresa tu email: </label>
-                    <input type = "email" id = "email" name = "email"/>
+                <div class="register_form">
+                    <label class = "register_form">Ingresa tu email: </label>
+                    <input class = "register_form" type = "email" id = "email" name = "email"/>
                 </div>
-                <div class="form-register">
-                    <label>Ingresa tu nombre de usuario: </label>
-                    <input type = "text" id = "username" name = "username"/>
+                <div class="register_form">
+                    <label class = "register_form">Ingresa tu nombre de usuario: </label>
+                    <input class = "register_form" type = "text" id = "username" name = "username"/>
                 </div>
-                <div class="form-register">
-                    <label>Ingresa tu contraseña: </label>
-                    <input type = "password" id = "password" name = "password"/>
+                <div class="register_form">
+                    <label class = "register_form">Ingresa tu contraseña: </label>
+                    <input class = "register_form" type = "password" id = "password" name = "password"/>
                 </div>
-                <div class="form-register">
-                    <label>Reingresa tu contraseña: </label>
-                    <input type = "password" id = "password_auth" name = "password_auth"/>
+                <div class="register_form">
+                    <label class = "register_form">Reingresa tu contraseña: </label>
+                    <input class = "register_form" type = "password" id = "password_auth" name = "password_auth"/>
                 </div>
                 <div id = "message_POST"> {{message_POST}}</div>
                 <button id = "button_send_info"> Enviar </button>
