--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -29,7 +29,7 @@
                     <label class = "login_form"> Ingresa tu contraseña </label>
                     <input class = "login_form" type = "password" id = "password" name = "password"/>
                 </div>
-                <div id = "message_POST"> {{message_POST}}</div>
+                <div class = "message_POST"> {{message_POST}}</div>
                 <button id = "button_send_info"> Enviar </button>
             </form>
         </div>
