--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -34,7 +34,7 @@
                     <label class = "register_form">Reingresa tu contraseña: </label>
                     <input class = "register_form" type = "password" id = "password_auth" name = "password_auth"/>
                 </div>
-                <div id = "message_POST"> {{message_POST}}</div>
+                <div class = "message_POST"> {{message_POST}}</div>
                 <button id = "button_send_info"> Enviar </button>
             </form>
         </div>
