--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -14,17 +14,17 @@
     <body>
         <div id = "text_menu">Menu de GatoApp</div>
         <div class = "container_menu"> 
-            <div class = "container_label">
-                <a id = "Guest_play"> Jugar como Invitado </a>
+            <div class = "container_label1">
+                <a  href = "/gatoapp" id = "guest_play"> Jugar como Invitado </a>
             </div>
-            <div class = "container_label">
-                <a id = "login"> Iniciar Sesión </a>
+            <div class = "container_label1">
+                <a  href = "/login" id = "login"> Iniciar Sesión </a>
             </div>
-            <div class = "container_label">
-                <a id = "register"> Registrate </a>
+            <div class = "container_label2">
+                <a  href = "/login/register" id = "register"> Registrate </a>
             </div>
-            <div class = "container_label">
-                <a id = "learn"> Aprende </a>
+            <div  class = "container_label2" >
+                <a href = "/"  id = "learn"> Aprende </a>
             </div>
         </div>
         <script src="" async defer></script>
