Modificacion kahoot y funcionamiento avanzado

--- a/gatoapp/static/css/styles.css
+++ b/gatoapp/static/css/styles.css
@@ -166,14 +166,14 @@
     width: 97vh;
     margin: auto;
 
-    background-color: #201e21;
+    background-color: white;
 }
 
 body {
     display: flex;
     align-content: center;
     align-items: center;
-    background-color: black;
+    background-color: white;
 }
 
 li {
