--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -10,23 +10,24 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href={% static 'css/style_menu.css' %}>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id = "text_menu">Menu de GatoApp</div>
-        <div class = "container_menu"> 
-            <div class = "container_label1">
+        <div id="oneToOneContainer-div">
+        <div id = "containerMenu-div" > 
+            <div class = "containerLabel-div">
                 <a  href = "/gatoapp" id = "guest_play"> Jugar como Invitado </a>
             </div>
-            <div class = "container_label1">
+            <div class = "containerLabel-div">
                 <a  href = "/login" id = "login"> Iniciar Sesión </a>
             </div>
-            <div class = "container_label2">
+            <div class = "containerLabel-div">
                 <a  href = "/login/register" id = "register"> Registrate </a>
             </div>
-            <div  class = "container_label2" >
-                <a href = "/"  id = "learn"> Aprende </a>
-            </div>
         </div>
+    </div>
         <script src="" async defer></script>
     </body>
 </html>
