--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -16,6 +16,38 @@
     </head>
     <body>
         <div id="oneToOneContainer-div">
+            <div class="div1"> </div>
+            <div class="div2"> </div>
+            <div class="div3"> </div>
+            <div class="div4"> </div>
+            <div class="div5"> </div>
+            <div class="div6"> </div>
+            <div class="div7"> </div>
+            <div class="div8"> </div>
+            <div class="div9"> </div>
+            <div class="div10"> </div>
+            <div class="div11"> </div>
+            <div class="div12"> </div>
+            <div class="div13"> </div>
+            <div class="div14"> </div>
+            <div class="div15"> </div>
+            <div class="div16"> </div>
+            <div class="div17"> </div>
+            <div class="div18"> </div>
+            <div class="div19"> </div>
+            <div class="div20"> </div>
+            <div class="div21"> </div>
+            <div class="div22"> </div>
+            <div class="div23"> </div>
+            <div class="div24"> </div>
+            <div class="div25"> </div>
+            <div class="div26"> </div>
+            <div class="div27"> </div>
+            <div class="div28"> </div>
+            <div class="div29"> </div>
+            <div class="div30"> </div>
+            <div class="div31"> </div>
+            <div class="div32"> </div>
         <div id = "containerMenu-div" > 
             <div class = "containerLabel-div">
                 <a  href = "/gatoapp" id = "guest_play"> Jugar como Invitado </a>
